<resources>
    <string name="app_name">Yes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Поиск</string>
    <string name="share">Поделиться</string>
    <string name="refresh">Обновить</string>
    <string name="navigation">Навигация</string>
    <string name="reviews">Отзывы</string>
    <string name="novelty">Новинки</string>
    <string name="profile">Профиль</string>
    <string name="users">Пользователи</string>
    <string name="categories">Категории</string>
    <string name="rating">Рейтинг</string>
    <string name="discussions">Обсуждения</string>
    <string name="reservation">Бронирование</string>
    <string name="about_prog">О программе</string>
    <string name="nearby">Рядом</string>
    <string name="favorites">Избранное</string>
    <string-array name="categories_items">
        <item>Одежда для мужчин</item>
        <item>Одежда для женщин</item>
        <item>Детские товары</item>
        <item>Автотовары</item>
        <item>Бижутерия и часы</item>
        <item>Для дома и сада</item>
        <item>Инструменты и материалы</item>
        <item>Компьютерная техника</item>
        <item>Красота и здоровье</item>
        <item>Спорт и развлечения</item>
        <item>Сумки и обувь</item>
        <item>Телефоны и аксессуары</item>
        <item>Электроника</item>

    </string-array>
    <string-array name="mansCloth">
        <item>Верх</item>
        <item>Низ</item>
        <item>Одежда и Аксессуары</item>
        <item>Популярные</item>
        <item>Аксессуары</item>
         <item>Солнцезащитные очки</item>
    </string-array>
    <string-array name="womanCloth">
        <item>Популярные товары</item>
        <item>Низ</item>
        <item>Куртки и пальто</item>
        <item>Свадьба и торжества</item>
        <item>Нижнее бельё</item>
        <item>Аксессуары</item>

    </string-array>
    <string-array name="upForManArray">
        <item>Футболки</item>
        <item>Поло</item>
        <item>Майки</item>
        <item>Рубашки</item>
        <item>Пуловеры и кардиганы</item>
        <item>Белье</item>
    </string-array>
    <string-array name="bottomForMan">
        <item>Повседневные штаны </item>
        <item>Джинсы</item>
        <item>Шорты и бермуды</item>
        <item>Нижнее бельё</item>
        <item>Одежда для купания</item>
        <item>Носки</item>
        <item>Теплое белье</item>
    </string-array>
    <string-array name="jacetsAndCoatsArray">
        <item>Куртки </item>
        <item>Пальто</item>
        <item>Плащи</item>
        <item>Толстовки</item>
        <item>Джинсовые куртки</item>
        <item>Спортивные куртки</item>
        <item>Ветровки</item>

        <item>Кожанные куртки</item>
        <item>Пуховики и парки </item>
        <item>Жилеты</item>
    </string-array>
    <string-array name="suitAndBlazerArray">
        <item>Пиджаки</item>
        <item>Костюмы</item>
    </string-array>
    <string-array name="sportWearArray">
        <item>Куртки</item>
        <item>брюки</item>
        <item>Куртка с капюшоном</item>
        <item>Спортивный костюм </item>
        <item>Брюки с начесоми</item>
    </string-array>
    <string-array name="accessoriesForManArray">
        <item>Головные уборы (бейсболки, шапки )</item>
        <item>Шарфы</item>
        <item>Перчатки</item>
        <item>Ремни и пояса</item>
        <item>Сумки и портмоне</item>
        <item>Галстуки и платки</item>
        <item>Мужские украшения</item>
        <item>Очки(Авиаторы, вайфареры, квадратная оправа, круглая оправа, овальная оправа)</item>
        <item>Часы </item>
        <item>Браслеты</item>
    </string-array>
    <string-array name="indoorClothingArray">
        <item>Халаты</item>
        <item>Брюки</item>
        <item>Пижамы</item>
    </string-array>
    <string-array name="tranksAndShortArray">
        <item>Плавки</item>
        <item>Брюки</item>
        <item>Пижамы</item>
    </string-array>
    <string-array name="category_spinner_array">
        <item>ФИЛЬТР</item>
        <item>цена (по возрастанию)</item>
        <item>цена (по убыванию)</item>
        <item>число заказов</item>
        <item>число бронирование</item>
        <item>рейтинг продавца</item>
        <item>от нового к старому</item>
        <item>акция, скидка, распродажа</item>
        <item>оцененный товар</item>
    </string-array>
    <string-array name="bottomForWomanArray">
        <item>Юбки (Летние юбки, Мини (короткие),Миди (средней длины),Макси (длинные),Джинсовые юбки,Теплые и вязаные юбки,
Юбки-карандаш (прямые))
</item>
        <item>Шорты</item>
        <item>Джинсы (Джинсовые шорты и бермуды,Джинсы-капри,Джинсы)
</item>
        <item>Брюки и капри</item>
        <item>Леггинсы</item>

    </string-array>
    <string-array name="topForWomanArray">
        <item>Пальто</item>
        <item>Ветровки</item>
        <item>Плащи и тренчкоты</item>
        <item>Теплые куртки</item>
        <item>Парки</item>
        <item>Тренчи</item>
        <item>Спортивные куртки</item>
        <item>Джинсовые куртки</item>
        <item>Жилеты </item>
        <item>Толстовки</item>
    </string-array>
    <string-array name="babiesGoodArray">
        <item>Белье, купальники</item>
        <item>Боди, песочники</item>
        <item>Брюки</item>
        <item>Верхняя одежда(куртки, пальто, плащи)</item>
        <item>Комбинезоны</item>
        <item>Конверты</item>
        <item>Комплекты</item>
        <item>Костюмы</item>
        <item>Кофточки</item>
        <item>Кофты</item>
        <item>Носки, колготки</item>
        <item>Одежда для дома</item>
        <item>Одежда для крещения</item>
        <item>Платья, юбки</item>
        <item>Ползунки</item>
        <item>Футболки</item>
        <item>Шорты</item>
        <item>Белье, купальники</item>
        <item>Обувь</item>

    </string-array>
    <string-array name="girlieGoodsArray">
        <item>Белье, носки, колготки</item>
        <item>Блузки, туники</item>

        <item>Брюки и шорты</item>
        <item>Верхняя одежда(куртки, пальто, плащи)</item>
        <item>Водолазки, лонгсливы</item>
        <item>Джинсы</item>
        <item>Комбинезоны</item>
        <item>Костюмы, комплекты</item>
        <item>Кофты, жакеты</item>
        <item>Купальники</item>
        <item>Одежда для дома</item>
        <item>Платья</item>
        <item>Пуловеры, джемперы</item>
        <item>Свитшоты, толстовки</item>
        <item>Топы</item>
        <item>Футболки</item>
        <item>Шорты, бермуды</item>
        <item>Юбки</item>
        <item>Обувь</item>

    </string-array>
    <string-array name="weddingDressArray">
        <item>Свадебные платья</item>
        <item>Вечерние платья</item>
        <item>Выпускные платья</item>
        <item>Платья подружек невесты</item>
        <item>Коктельные платья </item>
    </string-array>
    <string-array name="pregnantWearArray">
        <item></item>
        <item></item>
        <item></item>

    </string-array>
    <string-array name="womanAccessoryArray">
        <item>Головные уборы</item>
        <item>Шарфы, платки, перчатки</item>
        <item>Пояса и Ремни</item>
        <item>Солнцезащитные очки</item>
        <item>Бейсболки</item>
    </string-array>
    <string-array name="womanIndoorClothArray">
        <item>Кофточки и топы</item>
        <item>Пижамы </item>
        <item>Ночные сорочки</item>
        <item>Халаты </item>
        <item>Брюки </item>
        <item>Домашняя одежда</item>
    </string-array>
    <string-array name="womanSportWearArray">
        <item>Куртки и пуловеры</item>
        <item>Спортивные брюки</item>
        <item>Спортивные костюмы</item>
        <item>Футболки и топы</item>
        <item>Обувь и аксессуары</item>
        <item>Домашняя одежда</item>
    </string-array>
    <string-array name="womanUnderClothArrray">
        <item>Бюстгальтеры</item>
        <item>Неглиже</item>
        <item>Купальники</item>
        <item>Корсажи,майки,бодиы</item>
        <item>Комплекты белья </item>
        <item>Корректирующее белье</item>
        <item>Чулки и носки </item>
        <item>Аксессуары</item>
    </string-array>
    <string-array name="popularForWomanArray">
        <item>Платья (летние платья,
            повседневные платья, пляжные,
            Короткие платья, Длинные платья(макси),
            Вечерние и офисные платья, Джинсовые платья,
            Трикотажные платья, Теплые и вязанные платья.)</item>
        <item>Блузки и туники (блузки, кофты, рубашки, туники, джинсовые блузки и рубашки)</item>
        <item>Кардиганы и пуловеры(болеро, кардиганы, пуловеры, водолазки, жилеты и безрукавки)</item>
        <item>Футболки и топы (топы, футболки, поло)</item>
        <item>Майки</item>
        <item>Комбинезоны</item>
        <item>Блейзеры, жакеты, костюмы(блейзеры и жакеты, жилеты, деловые костюмы, джинсовые жакеты и жилетки )</item>
           </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_novelty_adapter">NoveltyAdapter</string>
    <string name="login_email">Логин или e-mail</string>
    <string name="password">Пароль</string>
    <string name="code">Код</string>
    <string name="refresh_image">Обновить изображение</string>
    <string name="forget_pswd">Забыли пароль?</string>
    <string name="recall">Напомнить</string>
    <string name="registration">Регистрация</string>
    <string name="entry">Вход</string>
    <string name="status">Статус</string>
    <string name="gender">Пол</string>
    <string name="reg_gender">Ваш пол</string>
    <string name="male">м</string>
    <string name="female">ж</string>
    <string name="birthday">Дата рождения</string>
    <string name="city">Город</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="login">Логин или номер телефона</string>
    <string name="reg_password">Пароль (7 или более символов)</string>
    <string name="security">Защита</string>
    <string name="repeat_pswd">Подтвердите пароль</string>
    <string name="mail">Адрес эл. почты</string>
    <string name="show_history">Показать друзьям историю покупок</string>
    <string name="show_recomendations">Показать друзьям рекомендации товаров и услуг</string>
    <string name="agreement">Нажимая кнопку "Зарегистрироваться", я подтверждаю свою дееспособность и даю согласие на обработку своих персональных данных</string>
    <string name="register">Зарегистрироваться</string>
    <string name="region">Регион</string>
    <string name="choose_country">Выберите страну</string>
    <string name="choose_city">Выберите город</string>
    <string name="any">Любой</string>
    <string name="age">Возраст</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="choose_male">Мужской</string>
    <string name="choose_female">Женский</string>
    <string name="novelty_info">&gt;&gt; К информации о товарах и сервисных услугах</string>
    <string name="search_param">Параметры поиска</string>
    <string name="search_hint">Я ищу...</string>
    <string-array name="country_array">
        <item>Россия</item>
        <item>Украина</item>
        <item>Казахстан</item>
    </string-array>
    <string-array name="city_russia">
        <item>Москва</item>
        <item>Самара</item>
        <item>Грозный</item>
        <item>Уфа</item>
    </string-array>
    <string name="title_activity_requests">Requests</string>
    <string name="title_activity_cloth_for_men">TopClothForMen</string>
    <string name="title_activity_cloth_for_woman">ClothForWoman</string>
    <string name="title_activity_cloth_for_children">ClothForChildren</string>
    <string name="title_activity_gears_for_auto">GearsForAuto</string>
    <string name="title_activity_jewlry_and_clock">JewlryAndClock</string>
    <string name="title_activity_home_and_garden">HomeAndGarden</string>
</resources>