<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tataev.yes.Reviews">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/menu_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/yes_second_menu"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/menu_text"
            android:textSize="8sp"/>

        <TextView
            android:id="@+id/nearby_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/navigation_second_menu"
            android:gravity="center"
            android:text="@string/nearby"
            android:textColor="@color/menu_text"
            android:textSize="8sp"/>

        <TextView
            android:id="@+id/novelty_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/novels_second_menu"
            android:gravity="center"
            android:text="@string/novelty"
            android:textColor="@color/menu_text"
            android:textSize="8sp"/>

        <TextView
            android:id="@+id/favor_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/favor_second_menu"
            android:gravity="center"
            android:text="@string/favorites"
            android:textColor="@color/menu_text"
            android:textSize="8sp"/>

        <TextView
            android:id="@+id/reservation_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/reservation_secong_menu"
            android:gravity="center"
            android:text="@string/reservation"
            android:textColor="@color/menu_text"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/categories_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/categ_second_menu"
            android:gravity="center"
            android:text="@string/categories"
            android:textColor="@color/menu_text"
            android:textSize="8sp" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listViewReviews" />

</LinearLayout>
