<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dp"
    android:background="@color/menu_tabs"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/menu_nov_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:drawableTop="@drawable/yes_second_menu"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/menu_text"
        android:textAllCaps="true"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/nearby_nov_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:drawableTop="@drawable/navigation_second_menu"
        android:gravity="center"
        android:text="@string/nearby"
        android:textColor="@color/menu_text"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/novelty_nov_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:drawableTop="@drawable/novels_second_menu"
        android:gravity="center"
        android:text="@string/novelty"
        android:textColor="@color/menu_text"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/favor_nov_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:drawableTop="@drawable/favor_second_menu"
        android:gravity="center"
        android:text="@string/favorites"
        android:textColor="@color/menu_text"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/reservation_nov_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:drawableTop="@drawable/reservation_secong_menu"
        android:gravity="center"
        android:text="@string/reservation"
        android:textColor="@color/menu_text"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/categories_nov_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:drawableTop="@drawable/categ_second_menu"
        android:gravity="center"
        android:text="@string/categories"
        android:textColor="@color/menu_text"
        android:textSize="10sp"/>
</LinearLayout>
    <SearchView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchCategory"
        android:searchIcon="@drawable/ic_action_search"
        android:background="@drawable/view_border"
        android:layout_below="@+id/fragment"
        android:layout_centerHorizontal="true"
        android:clickable="true" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/menu_tabs_line" />

</LinearLayout>
