<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context="com.tataev.yes.Profile"
    android:background="@drawable/profile_background">

    <EditText
        android:id="@+id/editProfLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/login_icon"
        android:gravity="center"
        android:hint="@string/login_email"
        android:textColorHint="@color/profile_text"
        android:background="@drawable/profile_border"
        android:layout_above="@+id/editProfPswd"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" />

    <EditText
        android:id="@+id/editProfPswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/secure"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/profile_text"
        android:background="@drawable/profile_border"
        android:layout_above="@+id/editProfCode"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:layout_alignLeft="@+id/editProfLogin"
        android:layout_alignStart="@+id/editProfLogin"
        android:layout_alignRight="@+id/editProfLogin"
        android:layout_alignEnd="@+id/editProfLogin" />

    <EditText
        android:id="@+id/editProfCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/code"
        android:textColorHint="@color/profile_text"
        android:background="@drawable/profile_border"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/editProfPswd"
        android:layout_alignStart="@+id/editProfPswd"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <TextView
        android:id="@+id/textCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textColorHint="@color/profile_text"
        android:background="@drawable/profile_border"
        android:padding="10dp"
        android:layout_alignBottom="@+id/editProfCode"
        android:layout_alignRight="@+id/editProfPswd"
        android:layout_alignEnd="@+id/editProfPswd"
        android:layout_toRightOf="@+id/editProfCode"
        android:layout_toEndOf="@+id/editProfCode"
        android:layout_below="@+id/editProfPswd"
        android:layout_marginLeft="15dp" />


    <TextView
        android:id="@+id/textRefreshImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_image"
        android:textSize="10sp"
        android:textColor="@color/refresh_image"
        android:layout_below="@+id/textCode"
        android:layout_alignRight="@+id/textCode"
        android:layout_alignEnd="@+id/textCode"
        android:layout_alignLeft="@+id/textCode"
        android:layout_alignStart="@+id/textCode"
        android:gravity="center"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/textRemPswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pswd"
        android:textColor="@color/profile_text"
        android:layout_below="@+id/textRefreshImage"
        android:layout_alignLeft="@+id/buttonsLayout"
        android:layout_alignStart="@+id/buttonsLayout"
        android:textSize="12sp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textRemPswd"
        android:layout_alignLeft="@+id/editProfCode"
        android:layout_alignStart="@+id/editProfCode"
        android:layout_alignRight="@+id/textCode"
        android:layout_alignEnd="@+id/textCode">

        <Button
            android:id="@+id/buttonReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:text="@string/registration"
            android:background="@drawable/button_border"
            android:textColor="@android:color/white"
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:text="@string/entry"
            android:background="@drawable/button_border"
            android:textColor="@android:color/white"
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:textSize="12dp" />

    </LinearLayout>

</RelativeLayout>
